# POO2022_OOP_vs_Proc

./: CMakeLists.txt
day1/: main.cpp
day1/oop/: client.cpp  client.h  order.cpp  product.cpp  product.h
day1/procedural/: order_procedure.cpp  order_procedure.h
day2/: main.cpp
day2/oop/: client.h  order.h  product.cpp  product.h
day2/procedural/: order_procedure.cpp  order_procedure.h
day3/: main.cpp
day3/oop/: client.cpp  order.cpp  order.h
day3/procedural/: order_procedure.cpp  order_procedure.h
